# Product-Registers

./: .gitignore  LICENSE.md  README.md  example.py  pyproject.toml  requirements.txt  test.json
NLMIPR/: ProductRegister.py  StandardMIPR.py  __init__.py
NLMIPR/BitFunctions/: BitFunction.py  CrossJoin.py  Fibonacci.py  Induction.py  __init__.py
ProductRegisters/: ANF.py  FeedbackRegister.py  __init__.py
ProductRegisters/BitFunctions/: BitFunction.py  Composition.py  CrossJoin.py  Fibonacci.py  Galois.py  Induction.py  Mersenne.py  __init__.py
ProductRegisters/BooleanLogic/: ANF.py  BooleanFunction.py  CNF.py  Gates.py  Inputs.py  SAT.py  __init__.py
ProductRegisters/BooleanLogic/RandomFunctions/: RandomFunction.py  Templates.py  __init__.py
ProductRegisters/Cryptanalysis/: algebraic_attacks_linearization.py  algebraic_attacks_naive.py  cube_attacks.py  utils.py
ProductRegisters/FeedbackFunctions/: CMPR.py  CrossJoin.py  FCSR.py  FeedbackFunction.py  Fibonacci.py  Galois.py  MPR.py  TFunction.py  __init__.py
ProductRegisters/Functions/: CMPR.py  CrossJoin.py  FeedbackFunction.py  Fibonacci.py  Galois.py  Induction.py  MPR.py  TFunction.py  __init__.py
ProductRegisters/Tools/: BerlekampMassey.py  BooleanFunctionTools.py  MersenneTools.py  ResolventSolving.py  RootCounting.py  VHDL_Writer.py
src/: NLFSR.py  __init__.py
src/BitFunctions/: BitFunction.py  Composition.py  CrossJoin.py  __init__.py
src/PyPR/: FeedbackRegister.py  __init__.py
tools/: BooleanFunctionTools.py  FunctionWriter.py  MersenneTools.py  VHDL_Writer.py  tests.py
(+75 files in other folders)
